# django-starter-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  cookiecutter.json  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  tests.py
accounts/migrations/: 0001_initial.py
components/: urls.py
conf/: settings.py  urls.py  wsgi.py
my_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/js/: htmx.min.js
{{ cookiecutter.project_slug }}/: .env.example  Dockerfile  pyproject.toml
{{ cookiecutter.project_slug }}/scripts/: entrypoint.sh
{{ cookiecutter.project_slug }}/users/: models.py
{{ cookiecutter.project_slug }}/users/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: asgi.py  settings.py  urls.py
{{cookiecutter.project_slug}}/: Dockerfile  dev.env  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: celery.py  settings.py
