[tool.poetry]
name = "django-starter-template"
version = "0.1.0"
description = ""
authors = ["Leon Rashkovsky <leon.rashkovsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^22.0.0"
django-htmx = "^1.17.2"
django-environ = "^0.11.2"
whitenoise = "^6.6.0"
django-components = "^0.67"


{% if cookiecutter.use_redis == 'y' %}
redis=="^5.0.8"
{% endif %}


{% if cookiecutter.use_django_rq == 'y' %}
django-rq=="^2.10.2"
rq=="^1.16.2"
{% endif %}

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.0.0"
django-extensions = "^3.1.5"
notebook = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
